Delete unused files

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -20,6 +20,11 @@
       </div>
     </div>
 
+    <div id="task-example" style="" class="hidden p-4 font-bold py-4 border-2 rounded-lg border-blue-800 text-blue-600">
+        <div class = "desc"></div>
+        <div class = "creation-date hidden"></div>
+        <div class = "due-date hidden"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
