Add simple way to get data and display it

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div id="task-example" style="" class="hidden p-4 font-bold py-4 border-2 rounded-lg border-blue-800 text-blue-600">
+    <div id="task-example" class="hidden p-4 font-bold py-4 border-2 rounded-lg border-blue-800 text-blue-600">
         <div class = "desc"></div>
         <div class = "creation-date hidden"></div>
         <div class = "due-date hidden"></div>
