--- a/front-end/index.html
+++ b/front-end/index.html
@@ -20,10 +20,10 @@
       </div>
     </div>
 
-    <div id="task-example" class="hidden p-4 font-bold py-4 border-2 rounded-lg border-blue-800 text-blue-600">
-        <div class = "desc"></div>
-        <div class = "creation-date hidden"></div>
-        <div class = "due-date hidden"></div>
+    <div id="task-example" class="hidden p-4 font-bold py-4 border-2 rounded-lg flex justify-between border-blue-800 text-blue-600">
+      <div class = "creation-date"></div>
+      <div class = "desc"></div>
+      <div class = "due-date"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
