Add the time left for each task

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,6 +16,7 @@
 
     <div id="task-example" class="hidden p-4 font-bold py-4 border-2 rounded-lg flex justify-between border-blue-800 text-blue-600">
       <div class = "creation-date"></div>
+      <!-- TODO center this div absolute -->
       <div class = "desc"></div>
       <div class = "due-date"></div>
     </div>
