--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,10 +14,9 @@
     <div id="task-list" class="pt-32 pl-60 pr-20 space-y-6">
     </div>
 
-    <div id="task-example" class="hidden p-4 font-bold py-4 border-2 rounded-lg flex justify-between border-blue-800 text-blue-600">
+    <div id="task-example" class="hidden p-4 font-bold py-4 border-2 rounded-lg flex justify-between border-blue-800 text-blue-600 relative">
       <div class = "creation-date"></div>
-      <!-- TODO center this div absolute -->
-      <div class = "desc"></div>
+      <div class = "desc -ml-4 absolute w-full text-center "></div>
       <div class = "due-date"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
